layout issues fixed, sizing

--- a/style.css
+++ b/style.css
@@ -312,7 +312,7 @@
     font-family: 'Concert One', cursive;
 }
 h1 {
-    /*font-size: 5vmin;*/
+    font-size: 4vmin;
     margin-top: 4px;
 }
 h2 {
@@ -628,11 +628,11 @@ h2 {
     top: 2%;
 }
 .signUpBtn{
-    font-size: 2vmin;
+    font-size: 3vmin;
     color: seashell;
 }
 .signOutBtn{
-    font-size: 2vmin;
+    font-size: 3vmin;
     color: seashell;
     display: none;
 }
@@ -660,7 +660,7 @@ h2 {
     width: 2.5%;
     height: 2.5%;
     color: seashell;
-    font-size: 2vmin;
+    font-size: 3vmin;
     text-align: center;
     background:none;
     border:none;
@@ -727,7 +727,7 @@ h2 {
     justify-content: center;
     flex-direction: column;
     margin: 18% auto;
-    padding: 20px;
+    /* padding: 20px; */
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 10px 10px 18px 0px rgba(0,0,0,0.75);
@@ -739,7 +739,7 @@ h2 {
     height: 20%;
     width: 15%;
     margin: 0 auto;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     border:none;
     border-radius: 5px;
 }
@@ -1443,6 +1443,7 @@ h2 {
     }
     .beachName{
         margin-top: -7px;
+        /* font-size: 4vmin; */
     }
 
 }
